--- a/WebApplication1AGRO/appsettings.json
+++ b/WebApplication1AGRO/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=localhost\\SQLEXPRESS;Initial Catalog=AGROAPP;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Connection": "Server=localhost\\SQLEXPRESS;Initial Catalog=AGROAPP1;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
 
