--- a/WebApplication1AGRO/appsettings.json
+++ b/WebApplication1AGRO/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=localhost;Initial Catalog=AgroConect;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Connection": "Server=localhost\\SQLEXPRESS;Initial Catalog=AgroConect;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
