[update] configuaración de CORS en Program.cs

--- a/WebApplication1AGRO/appsettings.json
+++ b/WebApplication1AGRO/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=localhost\\SQLEXPRESS;Initial Catalog=AgroConect;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Connection": "workstation id=AgroConect.mssql.somee.com;packet size=4096;user id=satellez_SQLLogin_1;pwd=3d3b17vir6;data source=AgroConect.mssql.somee.com;persist security info=False;initial catalog=AgroConect;TrustServerCertificate=True"
   }
 }
